syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.choreo.connect.discovery.subscription";
option java_outer_classname = "SubscriptionPolicyProto";
option java_multiple_files = true;

// [#protodoc-title: SubscriptionPolicy]

// SubscriptionPolicy data model
message SubscriptionPolicy {
	int32 id = 1;
	int32 tenantId = 2;
	string name = 3;
	string quotaType = 4;
	int32 graphQLMaxComplexity = 5;
	int32 graphQLMaxDepth = 6;
	int32 rateLimitCount = 7;
	string rateLimitTimeUnit = 8;
	bool stopOnQuotaReach = 9;
	string tenantDomain = 10;
	int64 timestamp = 11;
}
